syntax = "proto3";
option go_package = "github.com/raskchanky/go-bitcask/bitcask";
package bitcask;

message Entry {
  uint64 crc = 1;
  EntryData entry_data = 2;
}

message EntryData {
  int64 timestamp = 1;
  string key = 2;
  bytes value = 3;
  bool tombstone = 4;
}

message KeyDir {
  int64 timestamp = 1;
  string file_id = 2;
  int64 offset = 3;
}